changed data to digimon

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/sigma.js/1.2.1/sigma.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/sigma.js/1.2.1/plugins/sigma.parsers.json.min.js"></script>
 <script>
-  sigma.parsers.json('sigma_test_data.json', {
+  sigma.parsers.json('digiGraph.json', {
     container: 'container',
     settings: {
       defaultNodeColor: '#ec5148'
